# cetos

./: .gitignore  README.md  mkdocs.yml  pinned_results.json  pyproject.toml  requirements_dev.txt  setup.py
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: ci.yml  docs.yml  release.yml
ceto/: ais_adapter.py  analysis.py  energy_systems.py  imo.py
cetos/: __init__.py  ais_adapter.py  analysis.py  energy_systems.py  imo.py  models.py
docs/: changelog.md  contributing.md  index.md
docs/api/: ais_adapter.md  analysis.md  energy_systems.md  imo.md  utils.md
docs/getting-started/: development.md  installation.md  quick-start.md
docs/user-guide/: overview.md  vessel-data.md  voyage-profiles.md
tests/: fixtures.py  test_ais_adapter.py  test_ais_adapter_pinned.py  test_analysis.py  test_energy_systems.py  test_energy_systems_pinned.py  test_imo.py  test_imo_pinned.py  test_integration_pinned.py  test_models.py  test_utils.py
